--- a/aurbot.conf
+++ b/aurbot.conf
@@ -1,9 +1,6 @@
 [DEFAULT]
 build_cmd = makepkg -s --noconfirm --skippgpcheck
-commit_cmd = bash -c 'mv *.pkg.* ~'
+commit_cmd = bash -c 'mv *.pkg.* ~/Cloud/AURPackages'
 
 [polybar]
 maintainer = jaagr
-
-[linux-aufs]
-maintainer = sir_lucjan
