feat: moved install folder

--- a/aurbot.service
+++ b/aurbot.service
@@ -2,7 +2,7 @@
 Description=AUR Builder Bot
 
 [Service]
-ExecStart=/home/meowxiik/Cloud/Software/aurbot/aurbot -c /home/meowxiik/Cloud/Software/aurbot/aurbot.conf
+ExecStart=/opt/aurbot/aurbot -c /opt/aurbot/aurbot.conf
 Nice=10
 IOSchedulingClass=best-effort
 IOSchedulingPriority=7
