--- a/aurbot.conf
+++ b/aurbot.conf
@@ -2,5 +2,5 @@
 build_cmd = makepkg -s --noconfirm --skippgpcheck
 commit_cmd = bash -c 'mv *.pkg.* ~/Cloud/AURPackages'
 
-[polybar]
+[polybar-git]
 maintainer = jaagr
