--- a/aurbot.service
+++ b/aurbot.service
@@ -2,7 +2,8 @@
 Description=AUR Builder Bot
 
 [Service]
-ExecStart=/opt/aurbot/aurbot -c /opt/aurbot/aurbot.conf
+User=meowxiik
+ExecStart=/opt/aurbot/aurbot/aurbot -c /opt/aurbot/aurbot/aurbot.conf
 Nice=10
 IOSchedulingClass=best-effort
 IOSchedulingPriority=7
