feat: added my aur packages

--- a/aurbot.conf
+++ b/aurbot.conf
@@ -1,6 +1,229 @@
 [DEFAULT]
 build_cmd = makepkg -s --noconfirm --skippgpcheck
-commit_cmd = bash -c 'mv *.pkg.* ~/Cloud/AURPackages'
+commit_cmd = bash -c mv *.pkg.* /home/meowxiik/Cloud/AURPackages
 
-[polybar-git]
-maintainer = jaagr
+[activitywatch-bin]
+maintainer = erb
+
+[ananicy]
+maintainer = absrdspc
+
+[archtorify-git]
+maintainer = brainfucksec
+
+[autojump]
+maintainer = graysky
+
+[cheat]
+maintainer = yochananmarqos
+
+[clion]
+maintainer = Zrax
+
+[clion-cmake]
+maintainer = Zrax
+
+[clion-gdb]
+maintainer = Zrax
+
+[clion-jre]
+maintainer = Zrax
+
+[codecs64]
+maintainer = fordprefect
+
+[datagrip]
+maintainer = freswa
+
+[datagrip-jre]
+maintainer = freswa
+
+[devdocs-desktop]
+maintainer = jonian
+
+[dynamips]
+maintainer = runnytu
+
+[etcher-bin]
+maintainer = ali.molaei
+
+[ferdi-bin]
+maintainer = rizwan486
+
+[ffmpeg-compat-57]
+maintainer = HurricanePootis
+
+[gamin]
+maintainer = bidulock
+
+[gconf]
+maintainer = IslandC0der
+
+[gnome-mime-data]
+maintainer = bidulock
+
+[gnome-python]
+maintainer = patlefort
+
+[gnome-specimen]
+maintainer = khampf
+
+[gnome-vfs]
+maintainer = None
+
+[gns3-gui]
+maintainer = buzo
+
+[gns3-server]
+maintainer = buzo
+
+[godot-mono-bin]
+maintainer = Rinma
+
+[goland]
+maintainer = freswa
+
+[goland-jre]
+maintainer = freswa
+
+[intellij-idea-ultimate-edition]
+maintainer = uwolfer
+
+[intellij-idea-ultimate-edition-jre]
+maintainer = uwolfer
+
+[jekyll]
+maintainer = SilverRainZ
+
+[lazydocker]
+maintainer = mswift
+
+[libart-lgpl]
+maintainer = bartus
+
+[libbonobo]
+maintainer = PhotonX
+
+[libbonoboui]
+maintainer = PhotonX
+
+[libglade]
+maintainer = xuanruiqi
+
+[libgnome]
+maintainer = PhotonX
+
+[libgnome-data]
+maintainer = PhotonX
+
+[libgnomecanvas]
+maintainer = PhotonX
+
+[libgnomeui]
+maintainer = PhotonX
+
+[linux-aufs]
+maintainer = sir_lucjan
+
+[linux-aufs-docs]
+maintainer = sir_lucjan
+
+[linux-aufs-headers]
+maintainer = sir_lucjan
+
+[mongodb-bin]
+maintainer = ali.molaei
+
+[openjpeg]
+maintainer = Muflone
+
+[orbit2]
+maintainer = PhotonX
+
+[pycharm-professional]
+maintainer = XavierCLL
+
+[pygtk]
+maintainer = ragouel
+
+[python-mypy-protobuf]
+maintainer = demize
+
+[python-sentry_sdk]
+maintainer = yochananmarqos
+
+[python-stringcase]
+maintainer = arnottcr
+
+[python2-cairo]
+maintainer = None
+
+[python2-gobject2]
+maintainer = PhotonX
+
+[python2-numpy]
+maintainer = None
+
+[remnote]
+maintainer = solopasha
+
+[rider]
+maintainer = tim.hellhake
+
+[rmapi]
+maintainer = matteodelabre
+
+[ruby-em-websocket]
+maintainer = grawlinson
+
+[ruby-http_parser.rb]
+maintainer = bertptrs
+
+[ruby-jekyll-watch]
+maintainer = SilverRainZ
+
+[ruby-kramdown-parser-gfm]
+maintainer = bertptrs
+
+[ruby-liquid]
+maintainer = patrick.luehne
+
+[ruby-listen]
+maintainer = bertptrs
+
+[ruby-terminal-table]
+maintainer = bertptrs
+
+[ruby-unicode-display_width]
+maintainer = mnussbaum
+
+[sddm-theme-sugar-candy-git]
+maintainer = bruceutut
+
+[siji-git]
+maintainer = brandon099
+
+[ttf-icomoon-feather]
+maintainer = desbma
+
+[ubridge]
+maintainer = runnytu
+
+[webstorm]
+maintainer = freswa
+
+[webstorm-eap]
+maintainer = janek
+
+[webstorm-jre]
+maintainer = freswa
+
+[xtitle]
+maintainer = meanjollies
+
+[yay]
+maintainer = jguer
+
+[zfs-utils]
+maintainer = eschwartz
+
