feat: changed temp dir

--- a/aurbot.service
+++ b/aurbot.service
@@ -2,6 +2,9 @@
 Description=AUR Builder Bot
 
 [Service]
+Environment=TMP=/media/Cloud/tmp
+Environment=TEMP=/media/Cloud/tmp
+Environment=TMPDIR=/media/Cloud/tmp
 User=meowxiik
 ExecStart=/opt/aurbot/aurbot/aurbot -c /opt/aurbot/aurbot/aurbot.conf
 Nice=10
